# miracurol

./: Aptfile  Dockerfile  Makefile  Procfile  heroku.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  runtime.txt  startServer.py
.dump/: startServer.py
.dump/app/: index.html
.dump/backend/core/: config_loader.py  router.py
.dump/backend/database/: migration.py
.dump/backend/models/: base.py  user.py
.dump/backend/resources/: user.py
.dump/backend/security/: base.py
.dump/backend/server/: server.py
.dump/migrations/: env.py
.dump/migrations/versions/: v1_create_user_schema.py  v2_create_doctor_schema.py  v3_create_specialization_schema.py  v4_create_qualification_schema.py
app/: __init__.py  __main__.py  app.config.js  app.js  app.module.js  database.py  index.html  server.py
app/app/: app.js
app/assets/css/: style.css
app/css/: style.css
app/http/web-app/: angular.json  package-lock.json
app/http/web-app/src/: styles.scss
app/internal/: jwt.py  password.py  server.py
app/js/: app.js
app/models/: base.py
backend/commons/: enums.py
backend/core/: docs.py  router.py
backend/database/: entities.py
backend/resources/: user.py
backend/utils/: config_utils.py
configurations/: app.conf  database.conf  server.conf
db_migrations/versions/: v1_create_user_schema.py
web/: angular.json  package-lock.json  package.json
www/: README.md  angular.json  package-lock.json  package.json
