[tool.poetry]
name = "miracurol"
version = "0.1.0"
description = ""
authors = ["Arpan Mahanty <arpan.mahanty.007@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.18.1"}
alembic = "^1.8.0"
SQLAlchemy = "^1.4.39"
pydantic = {extras = ["email"], version = "^1.9.1"}
psutil = "^5.9.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
